--- a/with-fumadocs/content/docs/index.mdx
+++ b/with-fumadocs/content/docs/index.mdx
@@ -1,20 +1,9 @@
 ---
-title: Intro
+title: Fumadocs + Code Hike
 description: Your first document
 ---
 
-This is an example of a documentation site built with FumaDocs and Code Hike.
-
-The code for this website is in the [Code Hike examples repository](https://github.com/code-hike/examples/tree/main/with-fumadocs).
-
-Learn more:
-
-- [Code Hike docs](https://v1.codehike.org/docs)
-- [Fumadocs docs](https://fumadocs.vercel.app)
-
-## Demo
-
-[Codeblock](https://v1.codehike.org/docs/concepts/code) with [annotations](https://v1.codehike.org/docs/concepts/annotations) example (from `./components/code.tsx`):
+For more information, check out [Code Hike docs](https://v1.codehike.org/docs).
 
 ```js
 const lorem = ipsum(dolor, sit)
@@ -26,3 +15,8 @@ lorem.adipiscing((sed, elit) => {
   }
 })
 ```
+
+Learn more:
+
+- [Code Hike docs](https://v1.codehike.org/docs)
+- [Fumadocs docs](https://fumadocs.vercel.app)
