--- a/with-nextra/pages/index.mdx
+++ b/with-nextra/pages/index.mdx
@@ -1,8 +1,6 @@
-# Nextra + Code Hike
+# Nextra 3 + Code Hike
 
-For more information, check out [Code Hike v1 docs](https://v1.codehike.org/docs).
-
-Codeblock example (from `./theme-config.jsx`):
+For more information, check out [Code Hike docs](https://v1.codehike.org/docs).
 
 ```js
 const lorem = ipsum(dolor, sit)
