--- a/with-docusaurus/docs/intro.mdx
+++ b/with-docusaurus/docs/intro.mdx
@@ -4,7 +4,7 @@ sidebar_position: 1
 
 # Docusaurus + Code Hike
 
-For more information, check out [Code Hike docs](https://v1.codehike.org/docs).
+For more information, check out [Code Hike docs](https://codehike.org/docs).
 
 ```js
 const lorem = ipsum(dolor, sit)
