--- a/with-fumadocs/content/docs/index.mdx
+++ b/with-fumadocs/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Fumadocs + Code Hike
 description: Your first document
 ---
 
-For more information, check out [Code Hike docs](https://v1.codehike.org/docs).
+For more information, check out [Code Hike docs](https://codehike.org/docs).
 
 ```js
 const lorem = ipsum(dolor, sit)
@@ -18,5 +18,5 @@ lorem.adipiscing((sed, elit) => {
 
 Learn more:
 
-- [Code Hike docs](https://v1.codehike.org/docs)
+- [Code Hike docs](https://codehike.org/docs)
 - [Fumadocs docs](https://fumadocs.vercel.app)
