--- a/with-nextra-3/pages/index.mdx
+++ b/with-nextra-3/pages/index.mdx
@@ -1,6 +1,6 @@
 # Nextra 3 + Code Hike
 
-For more information, check out [Code Hike docs](https://v1.codehike.org/docs).
+For more information, check out [Code Hike docs](https://codehike.org/docs).
 
 ```js
 const lorem = ipsum(dolor, sit)
