--- a/with-fumadocs/content/docs/index.mdx
+++ b/with-fumadocs/content/docs/index.mdx
@@ -3,7 +3,9 @@ title: Fumadocs + Code Hike
 description: Your first document
 ---
 
-For more information, check out [Code Hike docs](https://codehike.org/docs).
+## Intro
+
+Welcome to the docs! You can start writing documents in `/content/docs`.
 
 ```js
 const lorem = ipsum(dolor, sit)
@@ -16,7 +18,9 @@ lorem.adipiscing((sed, elit) => {
 })
 ```
 
-Learn more:
+## Learn More
 
-- [Code Hike docs](https://codehike.org/docs)
-- [Fumadocs docs](https://fumadocs.vercel.app)
+<Cards>
+  <Card title="Learn more about Code Hike" href="https://codehike.org/docs" />
+  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+</Cards>
