--- a/with-fumadocs/content/docs/scrollycoding.mdx
+++ b/with-fumadocs/content/docs/scrollycoding.mdx
@@ -1,6 +1,7 @@
 ---
 title: Scrollycoding
 description: Scrollycoding
+full: true
 ---
 
 import { Scrollycoding } from "@/components/scrollycoding"
